--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ permalink:   date
 
 maruku:
   use_tex:    false
-  use_divs:   false
+  use_divs:   true
   png_engine: blahtex
   png_dir:    images/latex
   png_url:    /images/latex
