allow hour offsets to be set on photos_kml_date generator

--- a/travel/Rakefile
+++ b/travel/Rakefile
@@ -60,10 +60,11 @@ namespace :gen do
 		puts "generating photos_json.js complete"
 	end
 	desc "generate _js/photos_json.js file for flickr"
-	task :photos_kml_date, :date do |t, args|
+	task :photos_kml_date, :date, :hourOffset do |t, args|
 		date = args[:date]
+		hourOffset = args[:hourOffset]
 		puts "generating kml/#{date}-photos.kml"
-		system("./_scripts/flickr_generator.py photos_kml_date #{date} > kml/#{date}-photos.kml")
+		system("./_scripts/flickr_generator.py photos_kml_date #{date} #{hourOffset} > kml/#{date}-photos.kml")
 		puts "generating kml/#{date}-photos.kml complete"
 	end
 end
