--- a/travel/Rakefile
+++ b/travel/Rakefile
@@ -40,7 +40,7 @@ task :rsync => :"build:prod" do
 	system('mkdir -p /tmp/s3fs-travel.throughnothing.com')
 	system('s3fs travel.throughnothing.com /tmp/s3fs-travel.throughnothing.com -o use_rrs=1 -o default_acl=public-read')
 	system('jekyll --no-auto . /tmp/s3fs-travel.throughnothing.com')
-    system('sudo fusermount -u /tmp/s3fs-travel.throughnothing.com')
+    system('fusermount -u /tmp/s3fs-travel.throughnothing.com')
     system('rm -rf /mp/s3fs-travel.throughnothing.com')
 end
 
